# Rans0m

./: CMakeLists.txt  README.md  corrections.txt  create_bg.py  ransomware.cpp  ransomware.py  ransomware_all_in_one.cpp  ransomware_wmi.cpp  requirements.txt  requirements.txt.encrypted  techniques_avancees.cpp  wmi_persistence.cpp
